--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.9.0"
 authors = ["Lewin Bormann <lbo@spheniscida.de>"]
 description = "Trait-based encoding/decoding of integers into/from varint+zigzag/fixedint representation"
 repository = "git@github.com:dermesser/integer-encoding-rs.git"
+documentation = "http://dermesser.github.io/integer-encoding-rs/doc/integer_encoding/"
 license = "MIT"
 license-file = "LICENSE"
 
