--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "integer-encoding"
 version = "0.9.0"
 authors = ["Lewin Bormann <lbo@spheniscida.de>"]
-description = "Trait-based encoding/decoding of integers into/from varint+zigzag/fixedint representation"
+description = "varint+zigzag and fixedint integer encoding/decoding (https://developers.google.com/protocol-buffers/docs/encoding)"
 repository = "https://github.com/dermesser/integer-encoding-rs"
 documentation = "http://dermesser.github.io/integer-encoding-rs/doc/integer_encoding/"
 license = "MIT"
