--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "integer-encoding"
-version = "1.0.1"
+version = "1.0.2"
 authors = ["Lewin Bormann <lbo@spheniscida.de>"]
 description = "varint+zigzag and fixedint integer encoding/decoding (https://developers.google.com/protocol-buffers/docs/encoding)"
 repository = "https://github.com/dermesser/integer-encoding-rs"
-documentation = "http://dermesser.github.io/integer-encoding-rs/doc/integer_encoding/"
+documentation = "https://docs.rs/integer-encoding/"
 license-file = "LICENSE"
 keywords = ["integer", "varint", "zigzag", "protobuf", "serialize"]
 
