--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ repository = "https://github.com/dermesser/integer-encoding-rs"
 documentation = "https://docs.rs/integer-encoding/"
 license-file = "LICENSE"
 keywords = ["integer", "varint", "zigzag", "protobuf", "serialize"]
+edition = "2018"
 
 [dependencies]
+async-trait = "0.1"
+futures = "0.3"
