--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1"
-futures = "0.3"
+tokio = { version = "0.2", features = ["fs", "rt-core"] }
 
 [workspace]
 members = ["examples/read-write-file"]
