Enable switching between tokio/futures Async traits
for #4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1"
 tokio = { version = "0.2", features = ["fs", "rt-core"] }
+futures = { version = "0.3", optional = true }
 
 [workspace]
 members = ["examples/read-write-file"]
+
+[features]
+# Enable this feature if you want to use the AsyncRead/AsyncWrite traits from
+# the futures crate instead of those from tokio.
+use_futures_types = ["futures"]
