--- a/examples/read-write-file/Cargo.toml
+++ b/examples/read-write-file/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "0.2", features=["full"] }
-integer-encoding = { path = "../../" }
+integer-encoding = { path = "../../", features = []}
