--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["integer", "varint", "zigzag", "protobuf", "serialize"]
 edition = "2018"
 
 [dependencies]
-async-trait = "0.1"
+async-trait = { version = "0.1", optional = true }
 tokio = { version = "0.2", features = ["io-util"], optional = true }
 futures-util = { version = "0.3", optional = true, features = ["io"] }
 
@@ -23,8 +23,8 @@ members = ["examples/read-write-file"]
 [features]
 # Enable one of these features if you want to use the AsyncRead/AsyncWrite traits from
 # the futures crate instead of those from tokio.
-tokio_async = ["tokio"]
-futures_async = ["futures-util"]
+tokio_async = ["tokio", "async-trait"]
+futures_async = ["futures-util", "async-trait"]
 
 [package.metadata.docs.rs]
 
