--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ edition = "2018"
 
 [dependencies]
 async-trait = { version = "0.1", optional = true }
-tokio = { version = "0.2", features = ["io-util"], optional = true }
+tokio = { version = "0.3", features = ["io-util"], optional = true }
 futures-util = { version = "0.3", optional = true, features = ["io"] }
 
 [dev-dependencies]
-tokio = { version = "0.2", features = ["fs", "rt-threaded", "macros"] }
+tokio = { version = "0.3", features = ["fs", "rt-multi-thread", "macros"] }
 
 [workspace]
 members = ["examples/read-write-file", "examples/encode-varint-stdin"]
