--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: rust
-dist: bionic
+
+os:
+    - linux
+    - osx
+    - windows
+dist: focal
+rust:
+    - stable
+    - nightly
 
 # Test on the latest versions of all channels.
-rust:
-  - stable
-  - beta
-  - nightly
-
 script:
     - cargo test --features tokio_async --verbose
+    - cargo test --features futures_async --verbose
+    - cargo test --verbose
+    - cargo build --examples
 # Run this build on the "container-based infrastructure"
 # See http://docs.travis-ci.com/user/workers/container-based-infrastructure/.
 sudo: false
