--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
     - cargo test --features tokio_async --verbose
     - cargo test --features futures_async --verbose
     - cargo test --verbose
+    - cargo build --examples
 # Run this build on the "container-based infrastructure"
 # See http://docs.travis-ci.com/user/workers/container-based-infrastructure/.
 sudo: false
