Test code on OS X and Windows too.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
+jobs:
+    include:
+        - os: linux
+          dist: focal
+        - os: osx
+        - os: windows
+
 language: rust
-dist: bionic
 
 # Test on the latest versions of all channels.
 rust:
