--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures-util = { version = "0.3", optional = true, features = ["io"] }
 
 [dev-dependencies]
 tokio = { version = "0.3", features = ["fs", "rt-multi-thread", "macros"] }
+bencher = "~0.1"
 
 [[example]]
 name = "encode_varint_from_stdin"
@@ -24,6 +25,10 @@ required-features = ["tokio_async"]
 [[example]]
 name = "read_write_file"
 required-features = ["tokio_async"]
+
+[[bench]]
+name = "varint"
+harness = false
 
 [features]
 # Enable one of these features if you want to use the AsyncRead/AsyncWrite traits from
