--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ name = "read_write_file"
 required-features = ["tokio_async"]
 
 [[bench]]
-name = "varint"
+name = "main"
 harness = false
 
 [features]
