--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,8 @@ jobs:
         platform: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --no-default-features --features=${{ matrix.features }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --no-default-features --features=${{ matrix.features }}
+      - uses: actions/checkout@v5
+      - uses: dtolnay/rust-toolchain@stable
+      - run: cargo check --no-default-features --features=${{ matrix.features }}
+      - run: cargo test --no-default-features --features=${{ matrix.features }}
+      - run: cargo fmt -- --check
